--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -107,6 +107,13 @@
 
       <main class="main-content" id="MainContent">
         {{ content_for_layout }}
+        
+       {% for my_metaobject in shop.metaobjects["marke"].values %}
+         {{ my_metaobject.markenname }}
+         {{ my_metaobject }}
+       {% endfor %}
+        
+
       </main>
 
       {%- sections 'footer-group' -%}
