--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -110,7 +110,8 @@
         
        {% for my_metaobject in shop.metaobjects["marke"].values %}
          {{ my_metaobject.markenname }}
-         {{ my_metaobject }}
+         {{ my_metaobject.system.handle }}
+         
        {% endfor %}
         
 
