--- a/dev/scss/modules/_inc/collection-grid.scss
+++ b/dev/scss/modules/_inc/collection-grid.scss
@@ -1,6 +1,8 @@
-.medium-up--one-quarter {
-	/*width: 33%;*/
-	@include screen(med) {
-		width: 50%;
+.template-index {
+	.medium-up--one-quarter {
+		width: 33%;
+		@include screen(med) {
+			width: 50%;
+		}
 	}
 }
