Update meta key

--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -1,6 +1,6 @@
 <div id="brand__container">
   <div id="brand__container--header">
-    {{ page.metafields.custom.test.value.markenname.value }}
+    {{ page.metafields.reference.brand.value.markenname.value }}
   </div>
   <div id="brand__container--content">
     
