Add jQuery slim in Vers. 3.7.0 to theme

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -72,6 +72,11 @@
   </script>
 
   {{ content_for_header }}
+  
+  <script
+  src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
+  integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE="
+  crossorigin="anonymous"></script>
 
   <script src="{{ 'vendor-scripts-v14.js' | asset_url | split: '?' | first }}" defer="defer"></script>
 
