--- a/dev/scss/mixings/variables/client/_font-size.scss
+++ b/dev/scss/mixings/variables/client/_font-size.scss
@@ -5,10 +5,10 @@ $h4-size: calc(18px * 1.75);
 $h5-size: calc(18px * 1.5);
 $h6-size: calc(18px * 1.25);
 
-$font-size-large: calc(18px / 1.25);
-$font-size-medium: calc(18px / 1.5);
-$font-size-small: calc(18px / 1.75);
+$font-size-large: calc(22px / 1.25);
+$font-size-medium: calc(22px / 1.5);
+$font-size-small: calc(22px / 1.75);
 
-$hint-size-default: calc(18px / 2);
+$hint-size-default: calc(22px / 2);
 
-$font-size-default: 18px;
+$font-size-default: 1.25em;
