Update if condition in brands-overview snippet

--- a/snippets/brands-overview.liquid
+++ b/snippets/brands-overview.liquid
@@ -1,7 +1,9 @@
 <div id="brands__overview">
 	<div id="brands__overview--inner">
 		{% for brand in shop.metaobjects["marke"].values %}
-			{% if forloop.index <= 3 %}
+			{% if template.name != "index" %} 
+				{% if forloop.index <= 3 %}
+			{% endif %}
 				<div class="brand__container">
 					<div class="brand__container--inner">
 						<a href="{{ shop.url }}/pages/{{ brand.system.handle }}">
@@ -16,6 +18,8 @@
 						</a>
 					</div>
 				</div>
+			{% if template.name != "index" %}
+				{% endif %}
 			{% endif %}
 		{% endfor %}
 	</div>
