--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -11,25 +11,28 @@
         <img src="{{ page.metafields.reference.brand.value.markenlogo.value | image_url }}" alt="{{ page.metafields.reference.brand.value.markenname.value }}" id="brand__logo-image" />
       </div>
       <div id="brand__description">
+        <h2>About us</h2>
         <p>
           {{ page.metafields.reference.brand.value.markenbeschreibung_geschichte.value }}
         </p>
       </div>
     </div>
     <div id="brand__container--products">
+      <h2>Products from {{ page.metafields.reference.brand.value.markenname.value }}</h2>
+      <div id="brand__container--products--inner">
       {% assign products = page.metafields.reference.brand.value.produkte_der_marke.value %}
       {%- for product in products -%}
-        <div class="brand__product-container">
+        <div class="brand__product--container">
           <a href="{{ product.url }}" title="{{ product.title }}" class="brand__product__url">
-            <div class="brand__product-container__image">
+            <div class="brand__product--container__image">
               <img src="{{ product.featured_image | image_url }}" alt="{{ product.title }}" class="product__main-image" />
             </div>
-            <div class="brand__product-container__headline">
+            <div class="brand__product--container__headline">
               <h3>
                 {{ product.title }}
               </h3>
             </div>
-            <div class="brand__product-container__price">
+            <div class="brand__product--container__price">
               <p>
                 {{ product.price | money }}
               </p>
@@ -40,7 +43,7 @@
     </div>
     <div id="brand__container--footer">
       <div id="brand__footer--inner">
-        <h4>Legal notice and information of the brand</h4>
+       <!--<h4>Legal notice and information of the brand</h4>-->
         <ul id="brand__legal-menu">
           <li class="legal-menu__item"><a href="#imprint-pop-up" class="open-pop-up" data-effect="mfp-zoom-out">Imprint</a></li>
           <li class="legal-menu__item"><a href="#privacy-pop-up" class="open-pop-up" data-effect="mfp-zoom-out">Privacy policy</a></li>
