--- a/dev/scss/modules/_inc/brands-grid.scss
+++ b/dev/scss/modules/_inc/brands-grid.scss
@@ -35,6 +35,26 @@
 					&:hover {
 						cursor: pointer;
 					}
+					image-element {
+						position: relative;
+						width: 100%;
+						height: 0;
+						padding-bottom: 156.25%; /* Festlegen des Seitenverhältnisses (hier 1:1), z.B. 56.25% für 16:9 */
+						overflow: hidden;
+						display: block;
+						@include screen(med) {
+							padding-bottom: 56.25%;
+						}
+						img {
+							position: absolute;
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+							object-fit: cover; /* Das Bild wird beschnitten und auf die Größe des Containers skaliert */
+							object-position: center; /* Das Bild wird zentriert */
+						}
+					}
 					.brand__title {
 						position: absolute;
 						padding: $padding-medium/1.2;
