--- a/dev/scss/modules/_inc/collection-grid.scss
+++ b/dev/scss/modules/_inc/collection-grid.scss
@@ -20,3 +20,19 @@
 		}
 	}
 }
+
+#CollectionAjaxResult {
+	#CollectionAjaxContent {
+		.grid-product__image-mask {
+			position: relative;
+			width: 100%;
+			height: 0;
+			padding-bottom: 156.25%; /* Festlegen des Seitenverhältnisses (hier 1:1), z.B. 56.25% für 16:9 */
+			overflow: hidden;
+			display: block;
+			@include screen(med) {
+				padding-bottom: 56.25%;
+			}
+		}
+	}
+}
