--- a/dev/scss/layout/_inc/brand-single-view.scss
+++ b/dev/scss/layout/_inc/brand-single-view.scss
@@ -80,6 +80,21 @@
 				}
 			}
 		}
+		#brand__container--order-value {
+			display: block;
+			width: 100%;
+			padding: $padding-large;
+			margin: $margin-large $margin-none;
+			border: 1px solid $base-grey-light;
+			text-align: center;
+			@include border-radius(6px, 6px, 6px, 6px);
+			h1, h2, h3, h4, h5, h6 {
+				margin: $margin-none;
+				span {
+					font-weight: bold;
+				}
+			}
+		}
 		#brand__container--products {
 			text-align: center;
 			padding: $padding-small $padding-medium $padding-medium $padding-medium;
