--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -20,6 +20,11 @@
         <p>
           {{ page.metafields.reference.brand.value.markenbeschreibung_geschichte.value }}
         </p>
+        {%- if page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value != blank -%}
+        <div class="brand__description__pdf">
+          <a class="btn" href="https://{{ page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value.url }}" target="_blank" title="Further information about {{ page.metafields.reference.brand.value.markenname.value }}">Further information about {{ page.metafields.reference.brand.value.markenname.value }} (PDF)</a>
+        </div>
+        {%- endif -%}
       </div>
     </div>
     <div id="brand__container--products">
