--- a/dev/scss/layout/_inc/brand-single-view.scss
+++ b/dev/scss/layout/_inc/brand-single-view.scss
@@ -120,7 +120,7 @@
 							display: flex;
 							flex: 1 1 100%;
 							flex-wrap: wrap;
-							min-height: 350px;
+							min-height: 50vh;
 							align-content: flex-end;
 							align-items: flex-end;
 							justify-content: flex-end;
