--- a/dev/scss/layout/_inc/brand-single-view.scss
+++ b/dev/scss/layout/_inc/brand-single-view.scss
@@ -78,6 +78,23 @@
 					font-size: $font-size-large;
 					line-height: 1.6;
 				}
+				.brand__description__pdf {
+					display: block;
+					width: 100%;
+					margin: $margin-large auto;
+					padding: $padding-none;
+					a {
+						display: inline-block;
+						padding: $padding-small $padding-medium;
+						@include border-radius(6px, 6px, 6px, 6px);
+						border: 1px solid $base-grey-light;
+						font-weight: bold;
+						&:hover {
+							border: 1px solid $base-black;
+							@include transition(all .3s ease);
+						}
+					}	
+				}
 			}
 		}
 		#brand__container--order-value {
@@ -114,9 +131,48 @@
 						margin: $margin-none $margin-none $margin-small $margin-none;
 					}
 					a {
-						display: block;
 						cursor: pointer;
-						.brand__product--container__image {
+						display: flex;
+						  flex-direction: column;
+						  align-items: center; // Zentriert den Inhalt horizontal
+						  text-align: center;  // Zentriert den Text horizontal
+						  
+						  .brand__product--container__image {
+							width: 100%; // Das Bild wird immer 100% der Containerbreite einnehmen
+							height: auto; // Das Bild wird proportional skaliert
+							min-height: 400px; // Maximale Höhe für das Bild (Anpassen nach Bedarf)
+							max-height: 400px;
+							overflow: hidden;
+							display: flex;
+							flex-wrap: wrap;
+							align-items: center;
+							@include screen(med) {
+								min-height: 0px;
+								max-height: 100vh;
+							}
+							img {
+							  width: 100%;
+							  height: 100%;
+							  object-fit: contain; // Skaliert das Bild, um es komplett im Container anzuzeigen, ohne es zu beschneiden
+							}
+						  }
+						  
+						  .brand__product--container__headline {
+							margin-top: 10px; // Abstand zwischen dem Bild und der Überschrift (Anpassen nach Bedarf)
+							
+							h3 {
+							  font-size: 16px; // Größe der Überschrift (Anpassen nach Bedarf)
+							}
+						  }
+						  
+						  .brand__product--container__price {
+							margin-top: 10px; // Abstand zwischen der Überschrift und dem Preis (Anpassen nach Bedarf)
+							
+							p {
+							  font-size: 14px; // Größe des Preises (Anpassen nach Bedarf)
+							}
+						  }
+						/*.brand__product--container__image {
 							display: flex;
 							flex: 1 1 100%;
 							flex-wrap: wrap;
@@ -149,7 +205,7 @@
 								font-weight: $font-light;
 								margin: $margin-none;
 							}
-						}
+						}*/
 					}
 				}
 			}
