Add and create framework for custom login(s)

--- a/dev/scss/layout/main.scss
+++ b/dev/scss/layout/main.scss
@@ -3,3 +3,6 @@
 @import '_inc/main-section';
 @import '_inc/collection-single-view';
 @import '_inc/brand-single-view';
+@import '_inc/not-logged-in';
+@import '_inc/custom-registration';
+@import '_inc/account';
