Add functions and SCSS for password reset

--- a/dev/scss/layout/main.scss
+++ b/dev/scss/layout/main.scss
@@ -4,5 +4,6 @@
 @import '_inc/collection-single-view';
 @import '_inc/brand-single-view';
 @import '_inc/not-logged-in';
+@import '_inc/reset-password';
 @import '_inc/custom-registration';
 @import '_inc/account';
