--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -102,7 +102,11 @@
     <script type="text/javascript">window.setTimeout(function() { document.body.className += " loaded"; }, 25);</script>
   {% endif %}
 
-  {% if request.path != '/account/register' %}
+  {% if request.path == '/account/register' %}
+    {% include 'register-new' %}
+  {% elsif request.path contains '/account/reset' %}
+    {% include 'reset-password' %}
+  {% else %}
     {% if customer %}
       {% if customer.metafields.custom.bereits_angelegt_ != true %}
         {% include 'not-approved' %}
@@ -140,9 +144,6 @@
     {% else %}
       {% include 'not-logged-in' %}
     {% endif %}
-  {% else %}
-    {% include 'register-new' %}
   {% endif %}
-  
 </body>
 </html>
