Add userTag / productTag matching

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -102,11 +102,7 @@
     <script type="text/javascript">window.setTimeout(function() { document.body.className += " loaded"; }, 25);</script>
   {% endif %}
 
-  {% if request.path == '/account/register' %}
-    {% include 'register-new' %}
-  {% elsif request.path contains '/account/reset' %}
-    {% include 'reset-password' %}
-  {% else %}
+  {% if request.path != '/account/register' %}
     {% if customer %}
       {% if customer.metafields.custom.bereits_angelegt_ != true %}
         {% include 'not-approved' %}
@@ -144,6 +140,10 @@
     {% else %}
       {% include 'not-logged-in' %}
     {% endif %}
+  {% elsif request.path contains '/account/reset' %}
+    {% include 'reset-password' %}
+  {% else %}
+    {% include 'register-new' %}
   {% endif %}
 </body>
 </html>
