Fix tag matching

--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -31,39 +31,33 @@
       <h2>Products from {{ page.metafields.reference.brand.value.markenname.value }}</h2>
       <div id="brand__container--products--inner">
         {% assign currentUser = customer %}
-        {% assign userTags = currentUser.tags | split: ',' %}
         {% assign products = page.metafields.reference.brand.value.produkte_der_marke.value %}
-        {%- for product in products -%}
-        {% assign productTags = product.tags | split: ',' %}
-        
-        {% for tag in productTags %}
-          {% if userTags contains tag %}
-            <div class="brand__product--container">
-              <a href="{{ product.url }}" title="{{ product.title }}" class="brand__product__url">
-                <div class="brand__product--container__image">
-                  <img src="{{ product.featured_image | image_url }}" alt="{{ product.title }}" class="product__main-image" />
-                </div>
-                <div class="brand__product--container__headline">
-                  <h3>
-                    {{ product.title }}
-                  </h3>
-                </div>
-                <div class="brand__product--container__price">
-                  <p>
-                    {{ product.price | money }}
-                  </p>
-                </div>
-              </a>
-            </div>
-            {% break %}
-          {% endif %}
-        {% endfor %}
-        
+        {% assign userTags = currentUser.tags %}
+        {% for tag in userTags %}
+          {%- for product in products -%}
+            {% if product.tags contains tag %}
+              <div class="brand__product--container">
+                <a href="{{ product.url }}" title="{{ product.title }}" class="brand__product__url">
+                  <div class="brand__product--container__image">
+                    <img src="{{ product.featured_image | image_url }}" alt="{{ product.title }}" class="product__main-image" />
+                  </div>
+                  <div class="brand__product--container__headline">
+                    <h3>
+                      {{ product.title }}
+                    </h3>
+                  </div>
+                  <div class="brand__product--container__price">
+                    <p>
+                      {{ product.price | money }}
+                    </p>
+                  </div>
+                </a>
+              </div>
+              {% endif %}
+          {%- endfor -%}
         {%- endfor -%}
       </div>
     </div>
-
-      
     </div>
     <div id="brand__container--footer">
       <div id="brand__footer--inner">
