--- a/snippets/register-new.liquid
+++ b/snippets/register-new.liquid
@@ -17,7 +17,7 @@
 		<section id="CustomerRegistrationForm" class="section-form">
 			<div class="form-vertical">
 				{% form 'create_customer' %}
-			
+					<input type="hidden" name="return_to" value="/">
 				  {{ form.errors | default_errors }}
 			
 				  <label for="FirstName">{{ 'customer.register.first_name' | t }}</label>
