Troubleshooting for product output as they were output more than once

--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -30,32 +30,39 @@
     <div id="brand__container--products">
       <h2>Products from {{ page.metafields.reference.brand.value.markenname.value }}</h2>
       <div id="brand__container--products--inner">
-        {% assign currentUser = customer %}
-        {% assign products = page.metafields.reference.brand.value.produkte_der_marke.value %}
-        {% assign userTags = currentUser.tags %}
+      {% assign currentUser = customer %}
+      {% assign products = page.metafields.reference.brand.value.produkte_der_marke.value %}
+      {% assign userTags = currentUser.tags %}
+      {% assign displayedProducts = '' %} <!-- Neue Variable für bereits angezeigte Produkte -->
+    
+      {% for product in products %}
+        {% assign productDisplayed = false %}
         {% for tag in userTags %}
-          {%- for product in products -%}
-            {% if product.tags contains tag %}
-              <div class="brand__product--container">
-                <a href="{{ product.url }}" title="{{ product.title }}" class="brand__product__url">
-                  <div class="brand__product--container__image">
-                    <img src="{{ product.featured_image | image_url }}" alt="{{ product.title }}" class="product__main-image" />
-                  </div>
-                  <div class="brand__product--container__headline">
-                    <h3>
-                      {{ product.title }}
-                    </h3>
-                  </div>
-                  <div class="brand__product--container__price">
-                    <p>
-                      {{ product.price | money }}
-                    </p>
-                  </div>
-                </a>
-              </div>
-              {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+        {% if product.tags contains tag and productDisplayed == false %}
+          {% assign productDisplayed = true %}
+          {% assign displayedProducts = displayedProducts | append: product.handle | append: ',' %}
+          <!-- Produkt-Container -->
+          <div class="brand__product--container">
+          <a href="{{ product.url }}" title="{{ product.title }}" class="brand__product__url">
+            <div class="brand__product--container__image">
+            <img src="{{ product.featured_image | image_url }}" alt="{{ product.title }}" class="product__main-image" />
+            </div>
+            <div class="brand__product--container__headline">
+            <h3>
+              {{ product.title }}
+            </h3>
+            </div>
+            <div class="brand__product--container__price">
+            <p>
+              {{ product.price | money }}
+            </p>
+            </div>
+          </a>
+          </div>
+          <!-- Ende Produkt-Container -->
+        {% endif %}
+        {% endfor %}
+      {% endfor %}
       </div>
     </div>
     </div>
