--- a/snippets/collection-grid.liquid
+++ b/snippets/collection-grid.liquid
@@ -88,20 +88,28 @@
   
   {% assign currentUser = customer %}
   {% assign userTags = currentUser.tags %}
-  {% for tag in userTags %}
-    {%- for item in items -%}
+  {% assign displayedProducts = '' %} <!-- Liste der bereits angezeigten Produkte -->
+  
+  {% for item in items %}
+    {% assign productDisplayed = false %}
+    {% for tag in userTags %}
       {% if item.tags contains tag %}
-        {%- if item.object_type == 'product' -%}
-          {%- render 'product-grid-item', product: item, per_row: per_row, -%}
-        {%- else -%}
-          {%- render 'search-grid-item', item: item, per_row: per_row, -%}
-        {%- endif -%}
-      {%- endif -%}
-    {%- else -%}
-      <div class="grid__item">
-        <p>{{ 'collections.general.no_matches' | t }}</p>
-      </div>
-    {%- endfor -%}
+        {% unless displayedProducts contains item.handle %}
+          {% assign displayedProducts = displayedProducts | append: item.handle | append: ',' %}
+          {% if item.object_type == 'product' %}
+            {%- render 'product-grid-item', product: item, per_row: per_row -%}
+          {% else %}
+            {%- render 'search-grid-item', item: item, per_row: per_row -%}
+          {% endif %}
+        {% endunless %}
+      {% endif %}
+    {% endfor %}
   {% endfor %}
+  
+  {% if displayedProducts == blank %}
+    <div class="grid__item">
+      <p>{{ 'collections.general.no_matches' | t }}</p>
+    </div>
+  {% endif %}
   
 </div>
