--- a/snippets/register-new.liquid
+++ b/snippets/register-new.liquid
@@ -19,13 +19,42 @@
 				{% form 'create_customer' %}
 					<input type="hidden" name="return_to" value="/">
 				  {{ form.errors | default_errors }}
-			
+				  
+				  <label for="Company">Company name<!--{{ 'customer.register.first_name' | t }}--></label>
+					<input type="text" name="customer[note][Company]" id="Company" class="input-full" autocapitalize="words" autofocus>
+				  
+				  <label for="Address">Address<!--{{ 'customer.register.first_name' | t }}--></label>
+				  <input type="text" name="customer[note][Adress]" id="Address" class="input-full" autocapitalize="words" autofocus>
+				  
+				  <div style="display:flex;flex-wrap:wrap;">
+				  
+				  <div style="flex: 0 0 17.5%; padding: 0 2.5% 0 0;">
+				  <label for="Postalcode">Postalcode<!--{{ 'customer.register.first_name' | t }}--></label>
+					<input type="text" name="customer[note][Postalcode]" id="Postalcode" class="input-full" autocapitalize="words" autofocus>
+				  </div>
+				  <div style="flex: 1 1 auto;">
+					<label for="City">City<!--{{ 'customer.register.first_name' | t }}--></label>
+					<input type="text" name="customer[note][City]" id="City" class="input-full" autocapitalize="words" autofocus>
+				  </div>
+				  </div>
+					
+					<label for="Country">Country<!--{{ 'customer.register.first_name' | t }}--></label>
+					<input type="text" name="customer[note][Country]" id="Country" class="input-full" autocapitalize="words" autofocus>
+					
+					<label for="Website / URL">Website / URL<!--{{ 'customer.register.first_name' | t }}--></label>
+					<input type="text" name="customer[note][Website / URL]" id="Website / URL" class="input-full" autocapitalize="words" autofocus>
+				  
+				  
+				  <div style="display:flex;flex-wrap:wrap;">
+					  <div style="flex: 0 0 48%; padding: 0 2% 0 0;">
 				  <label for="FirstName">{{ 'customer.register.first_name' | t }}</label>
 				  <input type="text" name="customer[first_name]" id="FirstName" class="input-full" {% if form.first_name %}value="{{ form.first_name }}"{% endif %} autocapitalize="words" autofocus>
-			
+					  </div>
+					  <div style="flex: 1 1 auto; padding: 0 0 0 2%;">
 				  <label for="LastName">{{ 'customer.register.last_name' | t }}</label>
 				  <input type="text" name="customer[last_name]" id="LastName" class="input-full" {% if form.last_name %}value="{{ form.last_name }}"{% endif %} autocapitalize="words">
-			
+					  </div>
+				  </div>
 				  <label for="Email">{{ 'customer.register.email' | t }}</label>
 				  <input type="email" name="customer[email]" id="Email" class="input-full{% if form.errors contains 'email' %} error{% endif %}" {% if form.email %} value="{{ form.email }}"{% endif %} autocorrect="off" autocapitalize="off">
 			
