--- a/snippets/register-new.liquid
+++ b/snippets/register-new.liquid
@@ -46,11 +46,11 @@
 				  
 				  
 				  <div style="display:flex;flex-wrap:wrap;">
-					  <div style="flex: 0 0 48%; padding: 0 2% 0 0;">
+					  <div style="flex: 0 0 50%;padding: 0 2% 0 0;">
 				  <label for="FirstName">{{ 'customer.register.first_name' | t }}</label>
 				  <input type="text" name="customer[first_name]" id="FirstName" class="input-full" {% if form.first_name %}value="{{ form.first_name }}"{% endif %} autocapitalize="words" autofocus>
 					  </div>
-					  <div style="flex: 1 1 auto; padding: 0 0 0 2%;">
+					  <div style="flex: 1 1 50%;padding: 0 0 0 2%;">
 				  <label for="LastName">{{ 'customer.register.last_name' | t }}</label>
 				  <input type="text" name="customer[last_name]" id="LastName" class="input-full" {% if form.last_name %}value="{{ form.last_name }}"{% endif %} autocapitalize="words">
 					  </div>
