--- a/snippets/product-template.liquid
+++ b/snippets/product-template.liquid
@@ -217,12 +217,13 @@
 
                       {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
                         <div class="product__policies rte">
-                          {%- if shop.taxes_included -%}
+                          <!--{%- if shop.taxes_included -%}
                             {{ 'products.product.include_taxes' | t }}
-                          {%- endif -%}
-                          {%- if shop.shipping_policy.body != blank -%}
+                          {%- endif -%}-->
+                          Net prices / taxes not included.
+                          <!--{%- if shop.shipping_policy.body != blank -%}
                             {{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }}
-                          {%- endif -%}
+                          {%- endif -%}-->
                         </div>
                       {%- endif -%}
                     </div>
