--- a/snippets/not-logged-in.liquid
+++ b/snippets/not-logged-in.liquid
@@ -40,7 +40,7 @@
 					 <label for="login-sign-in-submit" class="hidden-label">{{ 'customer.login.sign_in' | t }}</label>
 					 <input type="submit" id="login-sign-in-submit" class="btn btn--full btn--no-animate" value="{{ 'customer.login.sign_in' | t }}">
 				   </p>
-				   <p>{{ 'layout.customer.create_account' | t | customer_register_link }}</p>
+				   <p class="regButton">{{ 'layout.customer.create_account' | t | customer_register_link }}</p>
 			
 				 {% endform %}
 			   </div>
