Add meta data and SCSS for new field "Bestellhinweis"

--- a/dev/scss/layout/_inc/brand-single-view.scss
+++ b/dev/scss/layout/_inc/brand-single-view.scss
@@ -101,7 +101,7 @@
 			display: block;
 			width: 100%;
 			padding: $padding-large;
-			margin: $margin-large $margin-none;
+			margin: $margin-large $margin-none $margin-none $margin-none;
 			border: 1px solid $base-grey-light;
 			text-align: center;
 			@include border-radius(6px, 6px, 6px, 6px);
@@ -110,6 +110,20 @@
 				span {
 					font-weight: bold;
 				}
+			}
+		}
+		#brand__container--order-note {
+			display: block;
+			width: 100%;
+			padding: $padding-small;
+			margin: $margin-small $margin-none $margin-large $margin-none;
+			text-align: center;
+			@include border-radius(6px, 6px, 6px, 6px);
+			h1, h2, h3, h4, h5, h6 {
+				margin: $margin-none;
+				font-size: $font-size-medium;
+				font-style: italic;
+				color: $base-grey;
 			}
 		}
 		#brand__container--products {
