--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -29,7 +29,39 @@
         </p>
         {%- if page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value != blank -%}
         <div class="brand__description__pdf">
-          <a href="https://{{ page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value.url }}" target="_blank" title="Further information about {{ page.metafields.reference.brand.value.markenname.value }}">Further information about {{ page.metafields.reference.brand.value.markenname.value }} (PDF)</a>
+          <a href="https://{{ page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value.url }}" target="_blank" title="Further information about {{ page.metafields.reference.brand.value.markenname.value }}" 
+          {% if page.metafields.reference.brand.value.background-color_button-first.value != blank %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-first.value }};"
+          {% endif %} 
+          >Further information about {{ page.metafields.reference.brand.value.markenname.value }} (PDF)</a>
+          
+          {%- if page.metafields.reference.brand.value.additional_pdf.value != blank -%}
+          <a href="https://{{ page.metafields.reference.brand.value.additional_pdf.value.url }}" target="_blank"
+          {% if page.metafields.reference.brand.value.background-color_button-second.value != blank %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-second.value }};"
+          {% endif %}
+          >
+            {%- if page.metafields.reference.brand.value.additional_pdf_label.value != blank -%}
+              {{ page.metafields.reference.brand.value.additional_pdf_label.value }}
+            {%- else -%}
+              Additional information (PDF)
+            {%- endif -%}
+          </a>
+          {%- endif -%}
+          
+          {%- if page.metafields.reference.brand.value.additional_url.value != blank -%}
+          <a href="{{ page.metafields.reference.brand.value.additional_url.value }}" target="_blank"
+          {% if page.metafields.reference.brand.value.background-color_button-third.value != blank %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-third.value }};"
+          {% endif %}
+          >
+            {%- if page.metafields.reference.brand.value.additional_url_label.value != blank -%}
+              {{ page.metafields.reference.brand.value.additional_url_label.value }}
+            {%- else -%}
+              Visit website
+            {%- endif -%}
+          </a>
+          {%- endif -%}
         </div>
         {%- endif -%}
       </div>
