--- a/sections/main-brand.liquid
+++ b/sections/main-brand.liquid
@@ -31,14 +31,22 @@
         <div class="brand__description__pdf">
           <a href="https://{{ page.metafields.reference.brand.value.weiterfuhrende_informationen_pdf.value.url }}" target="_blank" title="Further information about {{ page.metafields.reference.brand.value.markenname.value }}" 
           {% if page.metafields.reference.brand.value.background-color_button-first.value != blank %}
-            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-first.value }};"
+            {% assign color = page.metafields.reference.brand.value.background-color_button-first.value | downcase %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-first.value }};
+            {% if color contains 'dark' or color contains 'dunkel' or color contains 'schwarz' or color contains 'black' or color contains '#000' or color contains '#00' or color contains '#111' or color contains '#222' or color contains '#333' or color contains '#444' %}
+              color: white;
+            {% endif %}"
           {% endif %} 
           >Further information about {{ page.metafields.reference.brand.value.markenname.value }} (PDF)</a>
           
           {%- if page.metafields.reference.brand.value.additional_pdf.value != blank -%}
           <a href="https://{{ page.metafields.reference.brand.value.additional_pdf.value.url }}" target="_blank"
           {% if page.metafields.reference.brand.value.background-color_button-second.value != blank %}
-            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-second.value }};"
+            {% assign color = page.metafields.reference.brand.value.background-color_button-second.value | downcase %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-second.value }};
+            {% if color contains 'dark' or color contains 'dunkel' or color contains 'schwarz' or color contains 'black' or color contains '#000' or color contains '#00' or color contains '#111' or color contains '#222' or color contains '#333' or color contains '#444' %}
+              color: white;
+            {% endif %}"
           {% endif %}
           >
             {%- if page.metafields.reference.brand.value.additional_pdf_label.value != blank -%}
@@ -52,7 +60,11 @@
           {%- if page.metafields.reference.brand.value.additional_url.value != blank -%}
           <a href="{{ page.metafields.reference.brand.value.additional_url.value }}" target="_blank"
           {% if page.metafields.reference.brand.value.background-color_button-third.value != blank %}
-            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-third.value }};"
+            {% assign color = page.metafields.reference.brand.value.background-color_button-third.value | downcase %}
+            style="background-color: {{ page.metafields.reference.brand.value.background-color_button-third.value }};
+            {% if color contains 'dark' or color contains 'dunkel' or color contains 'schwarz' or color contains 'black' or color contains '#000' or color contains '#00' or color contains '#111' or color contains '#222' or color contains '#333' or color contains '#444' %}
+              color: white;
+            {% endif %}"
           {% endif %}
           >
             {%- if page.metafields.reference.brand.value.additional_url_label.value != blank -%}
@@ -104,7 +116,6 @@
         {% endfor %}
       {% endpaginate %}
       </div>
-    </div>
     </div>
     <div id="brand__container--footer">
       <div id="brand__footer--inner">
